--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,29 +6,22 @@
     android:orientation="vertical"
     tools:context=".activity.SettingsActivity">
 
-
-    <android.support.design.widget.AppBarLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/id_toolbar_for_settings"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary">
 
-        <android.support.v7.widget.Toolbar
-            android:background="@color/colorPrimary"
-            android:id="@+id/id_toolbar_for_settings"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Settings"
-                android:textAllCaps="true"
-                android:textSize="25sp"
-                android:textStyle="bold" />
-        </android.support.v7.widget.Toolbar>
-
-    </android.support.design.widget.AppBarLayout>
+            android:layout_height="wrap_content"
+            android:text="Settings"
+            android:textAllCaps="true"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
 
+    </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/id_single_recycler"
