--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/id_container"
-    android:orientation="vertical"
-    tools:context=".activity.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-
+    <LinearLayout
+        android:id="@+id/id_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".view.activity.mainActivity.MainActivity">
 
 
         <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
             android:id="@+id/id_toolbar"
-            android:background="@color/colorPrimary"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Bee forecast"
+                android:text="@string/app_name"
                 android:textAllCaps="true"
                 android:textSize="25sp"
                 android:textStyle="bold" />
@@ -31,20 +31,22 @@
             android:id="@+id/id_tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
             app:tabIndicatorColor="@color/color_selected_tab"
             app:tabMode="fixed"
-            android:background="@color/colorPrimary"
             app:tabSelectedTextColor="@color/color_selected_tab">
 
         </android.support.design.widget.TabLayout>
 
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/id_view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <android.support.v4.view.ViewPager
+            android:id="@+id/id_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    </android.support.v4.view.ViewPager>
+        </android.support.v4.view.ViewPager>
 
 
-</LinearLayout>
+    </LinearLayout>
+
+</layout>
