--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.SettingsActivity">
+    tools:context=".view.activity.settingsActivity.SettingsActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/id_toolbar_for_settings"
