--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.CurrentWeatherFragment">
+    tools:context=".view.activity.mainActivity.fragment.CurrentWeatherFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/id_swipe_refresh"
